--- a/EDA-forest.ipynb
+++ b/EDA-forest.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
+   "version": "3.7.6-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -30,14 +30,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import copy"
+    "import copy\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import copy\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree   import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import classification_report\n",
+    "# Random forest\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "# compare standalone models for binary classification\n",
+    "from numpy import mean\n",
+    "from numpy import std\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from matplotlib import pyplot\n",
+    "from sklearn.ensemble import StackingClassifier\n",
+    "# TensorFlow and tf.keras\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Conv1D, LSTM, Dense, Dropout, TimeDistributed, Flatten\n",
+    "from keras.optimizers import Adam\n",
+    "import keras\n",
+    "# Cross-validation\n",
+    "from keras.wrappers.scikit_learn import KerasClassifier\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.model_selection import cross_val_score"
    ]
   },
   {
@@ -49,73 +87,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_path = \"./data\"\n",
-    "x_train = pd.read_csv(f'{data_path}/x_train.csv', index_col=0)\n",
-    "y_train = pd.read_csv(f'{data_path}/y_train.csv', index_col=0)\n",
-    "x_test = pd.read_csv(f'{data_path}/x_test.csv',index_col=0)\n",
-    "y_test = pd.read_csv(f'{data_path}/y_test_baseline.csv',index_col=0)\n"
+    "X = pd.read_csv(f'{data_path}/x_train.csv')\n",
+    "y = pd.read_csv(f'{data_path}/y_train.csv')\n",
+    "x_testing = pd.read_csv(f'{data_path}/x_test.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "x_train:  (406708, 54)\ny_train:  (406708, 1)\nx_test:  (174304, 54)\ny_test:  (174304, 1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"x_train: \",x_train.shape)\n",
-    "print(\"y_train: \",y_train.shape)\n",
-    "print(\"x_test: \",x_test.shape)\n",
-    "print(\"y_test_baseline: \",y_test.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = copy.deepcopy(x_train)\n",
-    "Y_train = copy.deepcopy(y_train)\n",
-    "X_test = copy.deepcopy(x_test)\n",
-    "Y_test = copy.deepcopy(y_test)"
+    "X = X[X.columns[1:]]\n",
+    "X.columns = ['Elevation', 'Aspect', 'Slope', 'Horizontal_Distance_To_Hydrology', 'Vertical_Distance_To_Hydrology', 'Horizontal_Distance_To_Roadways', 'Hillshade_9am', 'Hillshade_Noon', 'Hillshade_3pm', 'Horizontal_Distance_To_Fire_Points', 'Wilderness_Area_1', 'Wilderness_Area_2', 'Wilderness_Area_3', 'Wilderness_Area_4', \n",
+    "'Soil_Type_1', 'Soil_Type_2','Soil_Type_3','Soil_Type_4','Soil_Type_5','Soil_Type_6','Soil_Type_7','Soil_Type_8','Soil_Type_9','Soil_Type_10',\n",
+    "'Soil_Type_11','Soil_Type_12','Soil_Type_13','Soil_Type_14','Soil_Type_15','Soil_Type_16','Soil_Type_17','Soil_Type_18','Soil_Type_19','Soil_Type_20',\n",
+    "'Soil_Type_21','Soil_Type_22','Soil_Type_23','Soil_Type_24','Soil_Type_25','Soil_Type_26','Soil_Type_27','Soil_Type_28','Soil_Type_29','Soil_Type_30',\n",
+    "'Soil_Type_31','Soil_Type_32','Soil_Type_33','Soil_Type_34','Soil_Type_35','Soil_Type_36','Soil_Type_37','Soil_Type_38','Soil_Type_39','Soil_Type_40']\n",
+    "\n",
+    "y = y[y.columns[1:]]\n",
+    "y.columns=['Cover_Type']\n",
+    "\n",
+    "# for testing the models\n",
+    "x_testing = x_testing[x_testing.columns[1:]]\n",
+    "x_testing.columns = ['Elevation', 'Aspect', 'Slope', 'Horizontal_Distance_To_Hydrology', 'Vertical_Distance_To_Hydrology', 'Horizontal_Distance_To_Roadways', 'Hillshade_9am', 'Hillshade_Noon', 'Hillshade_3pm', 'Horizontal_Distance_To_Fire_Points', 'Wilderness_Area_1', 'Wilderness_Area_2', 'Wilderness_Area_3', 'Wilderness_Area_4', \n",
+    "'Soil_Type_1', 'Soil_Type_2','Soil_Type_3','Soil_Type_4','Soil_Type_5','Soil_Type_6','Soil_Type_7','Soil_Type_8','Soil_Type_9','Soil_Type_10',\n",
+    "'Soil_Type_11','Soil_Type_12','Soil_Type_13','Soil_Type_14','Soil_Type_15','Soil_Type_16','Soil_Type_17','Soil_Type_18','Soil_Type_19','Soil_Type_20',\n",
+    "'Soil_Type_21','Soil_Type_22','Soil_Type_23','Soil_Type_24','Soil_Type_25','Soil_Type_26','Soil_Type_27','Soil_Type_28','Soil_Type_29','Soil_Type_30',\n",
+    "'Soil_Type_31','Soil_Type_32','Soil_Type_33','Soil_Type_34','Soil_Type_35','Soil_Type_36','Soil_Type_37','Soil_Type_38','Soil_Type_39','Soil_Type_40']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\nInt64Index: 406708 entries, 0 to 406707\nData columns (total 54 columns):\n #   Column                              Non-Null Count   Dtype\n---  ------                              --------------   -----\n 0   Elevation                           406708 non-null  int64\n 1   Aspect                              406708 non-null  int64\n 2   Slope                               406708 non-null  int64\n 3   Horizontal_Distance_To_Hydrology    406708 non-null  int64\n 4   Vertical_Distance_To_Hydrology      406708 non-null  int64\n 5   Horizontal_Distance_To_Roadways     406708 non-null  int64\n 6   Hillshade_9am                       406708 non-null  int64\n 7   Hillshade_Noon                      406708 non-null  int64\n 8   Hillshade_3pm                       406708 non-null  int64\n 9   Horizontal_Distance_To_Fire_Points  406708 non-null  int64\n 10  Wilderness_Area_1                   406708 non-null  int64\n 11  Wilderness_Area_2                   406708 non-null  int64\n 12  Wilderness_Area_3                   406708 non-null  int64\n 13  Wilderness_Area_4                   406708 non-null  int64\n 14  Soil_Type_1                         406708 non-null  int64\n 15  Soil_Type_2                         406708 non-null  int64\n 16  Soil_Type_3                         406708 non-null  int64\n 17  Soil_Type_4                         406708 non-null  int64\n 18  Soil_Type_5                         406708 non-null  int64\n 19  Soil_Type_6                         406708 non-null  int64\n 20  Soil_Type_7                         406708 non-null  int64\n 21  Soil_Type_8                         406708 non-null  int64\n 22  Soil_Type_9                         406708 non-null  int64\n 23  Soil_Type_10                        406708 non-null  int64\n 24  Soil_Type_11                        406708 non-null  int64\n 25  Soil_Type_12                        406708 non-null  int64\n 26  Soil_Type_13                        406708 non-null  int64\n 27  Soil_Type_14                        406708 non-null  int64\n 28  Soil_Type_15                        406708 non-null  int64\n 29  Soil_Type_16                        406708 non-null  int64\n 30  Soil_Type_17                        406708 non-null  int64\n 31  Soil_Type_18                        406708 non-null  int64\n 32  Soil_Type_19                        406708 non-null  int64\n 33  Soil_Type_20                        406708 non-null  int64\n 34  Soil_Type_21                        406708 non-null  int64\n 35  Soil_Type_22                        406708 non-null  int64\n 36  Soil_Type_23                        406708 non-null  int64\n 37  Soil_Type_24                        406708 non-null  int64\n 38  Soil_Type_25                        406708 non-null  int64\n 39  Soil_Type_26                        406708 non-null  int64\n 40  Soil_Type_27                        406708 non-null  int64\n 41  Soil_Type_28                        406708 non-null  int64\n 42  Soil_Type_29                        406708 non-null  int64\n 43  Soil_Type_30                        406708 non-null  int64\n 44  Soil_Type_31                        406708 non-null  int64\n 45  Soil_Type_32                        406708 non-null  int64\n 46  Soil_Type_33                        406708 non-null  int64\n 47  Soil_Type_34                        406708 non-null  int64\n 48  Soil_Type_35                        406708 non-null  int64\n 49  Soil_Type_36                        406708 non-null  int64\n 50  Soil_Type_37                        406708 non-null  int64\n 51  Soil_Type_38                        406708 non-null  int64\n 52  Soil_Type_39                        406708 non-null  int64\n 53  Soil_Type_40                        406708 non-null  int64\ndtypes: int64(54)\nmemory usage: 170.7 MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "x_train.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Features: 54 \n"
+    "X[\"sum\"] = 0\n",
+    "x_testing[\"sum\"] = 0\n",
+    "for i,val in enumerate(X):\n",
+    "    if i>=14:        \n",
+    "        X.loc[X[val]==1,val]=i\n",
+    "        x_testing.loc[x_testing[val]==1,val]=i\n",
+    "        X[\"sum\"]  = X[\"sum\"]  + X[val]\n",
+    "        x_testing[\"sum\"]  = x_testing[\"sum\"]  + x_testing[val]\n",
+    "for for i,val in enumerate(X):\n",
+    "    if i>=14: \n",
+    "\n"
    ]
   },
   {
