--- a/EDA-forest.ipynb
+++ b/EDA-forest.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,10 +135,30 @@
     "        X.loc[X[val]==1,val]=i\n",
     "        x_testing.loc[x_testing[val]==1,val]=i\n",
     "        X[\"sum\"]  = X[\"sum\"]  + X[val]\n",
-    "        x_testing[\"sum\"]  = x_testing[\"sum\"]  + x_testing[val]\n",
-    "for for i,val in enumerate(X):\n",
-    "    if i>=14: \n",
-    "\n"
+    "        x_testing[\"sum\"]  = x_testing[\"sum\"]  + x_testing[val]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'x_1_testing' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-16-7930f5eca01f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mfields\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'Elevation'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Aspect'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Slope'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Horizontal_Distance_To_Hydrology'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Vertical_Distance_To_Hydrology'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Horizontal_Distance_To_Roadways'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Hillshade_9am'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Hillshade_Noon'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Hillshade_3pm'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Horizontal_Distance_To_Fire_Points'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Wilderness_Area_1'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Wilderness_Area_2'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Wilderness_Area_3'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Wilderness_Area_4'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mX_1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfields\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mx_1_testing\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx_1_testing\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfields\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'x_1_testing' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "fields = ['Elevation', 'Aspect', 'Slope', 'Horizontal_Distance_To_Hydrology', 'Vertical_Distance_To_Hydrology', 'Horizontal_Distance_To_Roadways', 'Hillshade_9am', 'Hillshade_Noon', 'Hillshade_3pm', 'Horizontal_Distance_To_Fire_Points', 'Wilderness_Area_1', 'Wilderness_Area_2', 'Wilderness_Area_3', 'Wilderness_Area_4']\n",
+    "X_1 = X[fields]\n",
+    "x_1_testing = x_testing[fields]"
    ]
   },
   {
